# digital-twin

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/: profile.md
docs/: ARCHITECTURE.md  DECISIONS.md  HUMAN_EVAL_QUESTIONS.md  LIMITATIONS.md  MAINTENANCE.md  MAP.md  PLAN.md  RELEASE_CHECKLIST.md  SENTINEL.md  TESTING.md  TODO.md  deployment-runbook.md  pipeline_diagram.mmd
eval/: plot_eval.py  run_eval.py  tests.jsonl
scripts/: deploy_to_space.py  extract_pdfs.py  verify_slice_b.py  verify_slice_b_sigterm.py
src/: _retry_policy.py  answer.py  app.py  branches.py  canary_baseline.py  canary_corpus.py  canary_drift.py  canary_outcome.py  canary_runner.py  classifier.py  cluster_gaps.py  composer.py  contact_log.py  dashboard_model.py  event_classifier.py  failure_feed.py  flag_detector.py  generator.py  guardrail.py  hf_contact_log.py  hf_log_writer.py  ingest.py  interaction_log.py  kb_corpus.py  log_reader.py  metric_status.py  module_health.py  pipeline.py  profile.py  replayer.py  retrieval.py  rules.py  sample_chunks.py  schema_migrations.py  sentinel.py  session_state.py  summarize_failures.py  system_map.py  tool_loop.py  tools.py
tests/: test_answer.py  test_app_session_state.py  test_branches.py  test_canary_baseline.py  test_canary_corpus.py  test_canary_drift.py  test_canary_outcome.py  test_canary_runner.py  test_classifier.py  test_cluster_gaps.py  test_composer.py  test_contact_log.py  test_dashboard_model.py  test_eval.py  test_event_classifier.py  test_failure_feed.py  test_generator.py  (+23 more)
(+158 files in other folders)
