[project]
name = "digital-twin"
version = "0.1.0"
description = "Conversational agent representing Alejandro de la Fuente professionally"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "chromadb>=0.6.0",
    "gradio>=5.22.0",
    "huggingface-hub>=0.27.0",
    "litellm>=1.83.0",
    "matplotlib>=3.10.9",
    "numpy>=2.3.3",
    "openai>=1.68.2",
    "pydantic>=2.0",
    "python-dotenv>=1.0.1",
    "tenacity>=9.1.2",
    "tqdm>=4.67.0",
]

[dependency-groups]
dev = [
    "pypdf>=6.10.2",
    "pytest>=9.0.3",
    "pytest-json-report>=1.5.0",
]
